tests/expect/error/symbol-already-declared-on-shorthand.nva
x: int;
x = 1;

x := "Hello";